--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -831,7 +831,7 @@
    ],
    "source": [
     "# Convert the cities weather data into a Pandas DataFrame\n",
-    "city_data_df = pd.read_csv(\"../output_data/cities.csv\")\n",
+    "city_data_df = pd.read_csv(\"cities.csv\")\n",
     "#city_data_df = pd.DataFrame(city_data_df)\n",
     "# Show Record Count\n",
     "city_data_df.count()"
